2006-02-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_merge_dla) : updated

	* src/operators.c (igraph_compose) : added
	* examples/simple/igraph_compose.c : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_complementer) : added
	* examples/simple/igraph_complementer.c : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_difference) : added
	* examples/simple/igraph_difference.c : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_disjoint_union) : bug corrected
	* interfaces/python/graphobject.c (igraphmodule_Graph_union) :
	updated to refer to disjoint union

2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_union, igraph_union_many) : added
	(igraph_intersect) : make error check first
	(igraph_intersect) : removed memory leak
	(igraph_intersect_many) : # vertices is inherited from biggest graph
	* examples/simple/igraph_union.c : added
	* examples/simple/igraph_intersection.c : updated

2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_union, igraph_disjoint_union) :
	igraph_union renamed to igraph_disjoint_union
	(igraph_union_many, igraph_disjoint_union_many) : 
	igraph_union_many renamed to igraph_disjoint_union_many
	(igraph_intersection, igraph_intersection_many) : added
	* examples/simple/igraph_disjoint_union.c : added
	* examples/simple/igraph_intersection.c : added

	* src/vector.c (igraph_vector_filter_smaller) : added
	* examples/simple/vector.c : updated
	
	* examples/simple/igraph_motifs_randesu.c : bug corrected

2006-02-25  Tamas Nepusz  <ntamas@rmki.kfki.hu>

        * interfaces/python/graphobject.c : added igraphmodule_Graph_union
	* src/operators.c : corrected igraph_union bug
	* interfaces/python/igraphobject.c : added igraphmodule_convex_hull
	* interfaces/python/test.py : added new test cases

2006-02-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>
