@@ -3073,9 +3073,11 @@ SEXP R_igraph_isoclass_create(SEXP psize, SEXP pnumber, SEXP pdirected) {
   return result;
 }
 
-SEXP R_igraph_layout_merge_dla(SEXP layouts) {
-  
+SEXP R_igraph_layout_merge_dla(SEXP graphs, SEXP layouts) {
+
+  igraph_vector_ptr_t graphvec;
   igraph_vector_ptr_t ptrvec;
+  igraph_t *gras;
   igraph_matrix_t *mats;
   igraph_matrix_t res;
   long int i;
@@ -3083,15 +3085,22 @@ SEXP R_igraph_layout_merge_dla(SEXP layouts) {
   
   R_igraph_before();
   
+  igraph_vector_ptr_init(&graphvec, GET_LENGTH(graphs));
   igraph_vector_ptr_init(&ptrvec, GET_LENGTH(layouts));
+  gras=(igraph_t*)R_alloc(GET_LENGTH(graphs), sizeof(igraph_t));
   mats=(igraph_matrix_t*)R_alloc(GET_LENGTH(layouts),
 				 sizeof(igraph_matrix_t));
+  for (i=0; i<GET_LENGTH(graphs); i++) {
+    R_SEXP_to_igraph(VECTOR_ELT(graphs, i), &gras[i]);
+    VECTOR(graphvec)[i]=&gras[i];
+  }
   for (i=0; i<GET_LENGTH(layouts); i++) {
     R_SEXP_to_matrix(VECTOR_ELT(layouts, i), &mats[i]);
     VECTOR(ptrvec)[i]=&mats[i];
   }
   igraph_matrix_init(&res, 0, 0);
-  igraph_layout_merge_dla(&ptrvec, &res);
+  igraph_layout_merge_dla(&graphvec, &ptrvec, &res);
+  igraph_vector_ptr_destroy(&graphvec);
   igraph_vector_ptr_destroy(&ptrvec);
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
